--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -65,7 +65,17 @@ a {
   left: 0;
   width: 50%;
   z-index: 1;
+  pointer-events: none;
 }
+.neuron {
+  transition: .3s;
+  z-index: 0;
+}
+.neuron.active {
+  transform: scale(1.2);
+  z-index: 2;
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @include media-breakpoint-down(sm) {
 }
